RESOLVED FIXED62219
[Symbian] Float{32,64}Array and Int16Array fail to build.
https://bugs.webkit.org/show_bug.cgi?id=62219
Summary [Symbian] Float{32,64}Array and Int16Array fail to build.
Andreas Kling
Reported 2011-06-07 10:16:23 PDT
SSIA
Attachments
Proposed patch (3.27 KB, patch)
2011-06-07 10:16 PDT, Andreas Kling
laszlo.gombos: review+
kenneth: commit-queue-
Andreas Kling
Comment 1 2011-06-07 10:16:59 PDT
Created attachment 96255 [details] Proposed patch
Kenneth Rohde Christiansen
Comment 2 2011-06-07 10:18:25 PDT
Comment on attachment 96255 [details] Proposed patch View in context: https://bugs.webkit.org/attachment.cgi?id=96255&action=review Working on Symbian now :-) ? > Source/WebCore/html/canvas/Float32Array.h:41 > + // Canât use "using" here due to a bug in the RVCT compiler. Wrong encoding it seems > Source/WebCore/html/canvas/Float64Array.h:41 > + // Canât use "using" here due to a bug in the RVCT compiler. Same here
Laszlo Gombos
Comment 3 2011-06-07 12:22:56 PDT
Comment on attachment 96255 [details] Proposed patch LGTM. It would be good to mention that this is only needed for RVCT 2.2 (and not 4.0) for future reference in the ChangeLog. The encoding looks to be OK, unless one clicks on "Review patch". Perhaps an issue with "Review patch" ?
Andreas Kling
Comment 4 2011-06-08 03:52:54 PDT
Ademar Reis
Comment 5 2011-06-08 08:48:27 PDT
Revision r88336 cherry-picked into qtwebkit-2.2 with commit d7ac689 <http://gitorious.org/webkit/qtwebkit/commit/d7ac689>
Note You need to log in before you can comment on or make changes to this bug.